@@ -67,6 +67,7 @@ PostGIS 3.0.0
            (Darafei Praliaskouski)
   - #4289, ST_AsMVTGeom: Transform coordinates space before clipping (Raúl Marín)
   - #4275, Avoid passing a NULL pointer to GEOSisEmpty (Raúl Marín)
+  - #4296, Use `server_version_num` instead of parsing `version()` (Raúl Marín)
 
 
 PostGIS 2.5.0
